# AMATH-881-Final-Project

./: .gitignore  LICENSE
Code/: .gitignore  README.md
Code/pycont/robclewley-pydstool-9ecaefa/: test.py
Code/pydstool/: Dockerfile.models
Code/pydstool/models/: _model_curve_d.py  _model_curve_e.py
Code/scripts/: _init_cond.py
Code/tumor_analysis/: .dockerignore  Dockerfile  README.md  pyproject.toml
Code/tumor_analysis/src/tumor_atlas_ode/: synapse_download.py
Code/tumor_analysis/tests/: test_htan.py
Latex/: references.bib  research_template.aux  research_template.bbl  research_template.bcf  research_template.blg  research_template.fdb_latexmk  research_template.fls  research_template.out  research_template.run.xml  research_template.tex
Resources/: Publications Search - MathSciNet.webloc
archive/matlab_matcont/: CancerModel.m  main_bifurcation.asv  main_bifurcation.m  run_bifurcation.m  test.m
archive/pycont-docker/.devcontainer/: devcontainer.json
archive/pycont-docker/robclewley-pydstool-9ecaefa/: Dockerfile  PyCont_Logistic.py  PyCont_SaddleNode.py  entrypoint.sh  fingermodel_vode.py  ogmodel.py  test.py
pydstool/: .dockerignore  Dockerfile.pycont-logistic  Dockerfile.pydstool  README.rst  agent.md  run_commands.txt
pydstool/examples/: PyCont_Logistic.py
pydstool/models/: _model_curve_a.py  _model_curve_b.py  _model_curve_c.py  model_curve_f.py  run_all_models.py
scripts/: latex_table_for_param.py
tumor_analysis/: .dockerignore  .env  .gitignore
tumor_analysis/tests/: test_cli.py  test_ode_priors.py  test_rna.py
(+10 files in other folders)
