[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "tumor-atlas-ode"
version = "0.1.0"
description = "HTAN ingestion and RNA-informed ODE prior generation for tumor-immune dynamics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
]

[project.optional-dependencies]
synapse = [
  "synapseclient>=4.5.0",
]
dev = [
  "pytest>=8.3",
]

[project.scripts]
tumor-atlas-ode = "tumor_atlas_ode.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tumor_atlas_ode"]

